--- a/Challenge_Schaefer.ipynb
+++ b/Challenge_Schaefer.ipynb
@@ -2167,8 +2167,8 @@
    "id": "2e33795a-c538-4519-9c3d-060d2d536892",
    "metadata": {},
    "source": [
-    "1. In den Plots der Inferenzergebnisse sind Prediktionen die sehr hoch (siehe Ausreißer im Bild oberhalb). ==> Es sollte noch einmal die Outlier analysiert und behandelt werden\n",
-    "2. kNN und MLP bringen beide ähnliche Ergebniss ==> Business Case erstellen, ob oder ab welcher MAE eines der Modelle verwendet werden kann\n",
+    "1. In den Plots der Inferenzergebnisse sind Prediktionen, die sehr hoch sind (siehe Ausreißer im Bild oberhalb) ==> Es sollten noch einmal die Outlier analysiert und behandelt werden\n",
+    "2. kNN und MLP bringen beide ähnliche Ergebnisse ==> Business Case erstellen, ob oder ab welcher MAE eines der Modelle verwendet werden kann\n",
     "3. Für die Modelle muss noch eine Hyperparameter Optimierung durchgeführt werden\n",
     "4. Es können noch andere Modelle getestet werden\n",
     "5. Es kann noch einmal vertieft die Daten untersucht werden.\n",
